--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,3 @@
-@font-face {
-    font-family: 'funnel_sans';
-    src: url(/assets/fonts/Funnel_Sans/static/FunnelSans-Regular.ttf) format('truetype');
-    font-weight: 400;
-}
-@font-face {
-    font-family: 'markazi_text';
-    src: url(/assets/fonts/Markazi_Text/static/MarkaziText-Regular.ttf)
-    format('truetype');
-    font-weight: 400;
-}
-
-@font-face {
-    font-family: 'nunito';
-    src: url(/assets/fonts/Nunito/static/Nunito-Regular.ttf)
-    format('truetype');
-    font-weight: 400;
-}
 
 
 * {
@@ -25,7 +7,7 @@
 }
 
 html {
-    font-family: 'funnel_sans', sans-serif;
+    font-family: 'Funnel Sans', sans-serif;
 }
 
 /* Body */
@@ -37,6 +19,9 @@ body {
 main{
     padding: 3rem;
 }
+
+/* Colors Section */
+
 
 .section-group {
     padding: 10px;
@@ -73,4 +58,93 @@ main{
 
 #sand-teal {
     background-color: #E1FFBB;
+}
+
+
+/* Fonts Section */
+
+.font-title {
+    text-decoration: underline;
+    font-size: 22px;
+    font-weight: lighter;
+    margin-bottom: 1rem;
+}
+
+.font-group{
+    display: inline-block;
+    margin: 20px auto;
+    padding: .5rem;
+}
+
+.funnel-font, .markazi-font, .nunito-font {
+    line-height: 24px;
+    font-size: 20px;
+}
+
+.funnel-font > .regular {
+    font-weight: 400;
+}
+.funnel-font > .bold {
+    font-weight: bold;
+}
+.funnel-font > .light {
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.markazi-font {
+    font-family: 'Markazi Text', 'Times New Roman', Times, serif;
+}
+
+.markazi-font > .bold {
+    font-weight: bold;
+}
+
+.markazi-font > .light {
+    font-style: italic;
+    font-weight: 500;
+}
+
+.nunito-font {
+    font-family: 'Nunito',sans-serif;
+}
+.nunito-font > .regular {
+    font-weight: 400;
+}
+
+.nunito-font > .bold {
+    font-weight: bold;
+}
+
+.nunito-font > .light {
+    font-style: italic;
+    font-weight: lighter;
+}
+
+
+/* Text styles section */
+.text-style-container{
+    display: block;
+    margin: 20px 20px;
+    padding: .5rem;
+}
+
+/* General classes */
+.mb-1 {
+    margin-bottom: 1rem;
+}
+.mt-1 {
+    margin-top: 1rem;
+}
+
+.text-style-title{
+    font-weight: 700;
+    font-size: 26px;
+    font-family: 'Nunito';
+}
+
+.text-style-subtitle{
+    font-weight: 500;
+    font-size: 18px;
+    font-family: 'Markazi Text';
 }
